chore: better sprites, much better